audiobookshelf/audiobookshelf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      containers:
        - image: ghcr.io/advplyr/audiobookshelf:latest
          name: audiobookshelf
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /audiobooks
              name: audiobooks
            - mountPath: /config
              name: confdir
            - mountPath: /metadata
              name: metadata
      volumes:
        - name: audiobooks
          hostPath:
            path: /data/media/general/audiobooks
            type: Directory
        - name: confdir
          hostPath:
            path: /data/services/audiobookshelf/config
            type: Directory
        - name: metadata
          hostPath:
            path: /data/services/audiobookshelf/metadata
            type: Directory
