audiobookshelf/audiobookshelf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
spec:
  ports:
    - port: 80
  selector:
    app: audiobookshelf
