audiobookshelf/audiobookshelf-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audiobookshelf
spec:
  parentRefs:
    - name: traefik-gateway
  hostnames:
    - "audiobookshelf.drhack.org"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: audiobookshelf
          port: 80
